attempt 1: fix horizontal scroll homepage in iphone

--- a/layout/src/sass/pages/_aqsa-distance.scss
+++ b/layout/src/sass/pages/_aqsa-distance.scss
@@ -119,7 +119,10 @@
     height: 100%;
     @include media-breakpoint-down(md) {
       > div {
-        transform: translateX(-325px);
+        transform: translateX(325px);
+        .rtl & {
+          transform: translateX(-325px);
+        }
       }
     }
   }
@@ -128,6 +131,7 @@
     right: 489px;
     top: 168px;
     @include media-breakpoint-down(md) {
+      right: 10px;
       left: auto;
       top: 30px;
       transform: scale(0.85);
